--- a/_static/css/style.css
+++ b/_static/css/style.css
@@ -1,19 +1,3 @@
-/* FONTS 
-@font-face {
-  font-family: "Cantarell var";
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: normal;
-  font-named-instance: "Regular";
-  src: url("../fonts/Cantarell-VF.woff2") format("woff2"),
-    url("../fonts/Cantarell-VF.otf") format("opentype");
-}
-
-html {
-  font-family: "Cantarell", sans-serif;
-}
-*/
-
 /* GNOME CSS theme for Sphinx + Furo
 
 https://www.sphinx-doc.org
@@ -25,21 +9,21 @@ https://pypi.org/project/furo/
 	font-family: "Cantarell";
 	font-style: normal;
 	font-weight: 800;
-	src: url(fonts/cantarell-extra-bold-latin.woff2) format("woff2");
+	src: url(../fonts/cantarell-extra-bold-latin.woff2) format("woff2");
 	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2212,U+2215;
 }
 @font-face {
 	font-family: "Cantarell";
 	font-style: normal;
 	font-weight: 600;
-	src: url(fonts/cantarell-bold-latin.woff2) format("woff2");
+	src: url(../fonts/cantarell-bold-latin.woff2) format("woff2");
 	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2212,U+2215;
 }
 @font-face {
 	font-family: "Cantarell";
 	font-style: normal;
 	font-weight: 400;
-	src: url(fonts/cantarell-regular-latin.woff2) format("woff2");
+	src: url(../fonts/cantarell-regular-latin.woff2) format("woff2");
 	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2212,U+2215;
 }
 
@@ -47,7 +31,7 @@ https://pypi.org/project/furo/
 	font-family: "Cantarell";
 	font-style: normal;
 	font-weight: 300;
-	src: url(fonts/cantarell-light.woff2) format("woff2");
+	src: url(../fonts/cantarell-light.woff2) format("woff2");
   font-display: block;
 }
 
